Update pm2.md